ops/environments/development/replicas.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-demo-web
spec:
  replicas: 1
